src/components/Dashboard/Dashboard.scss
@import '../../scss/mixins.scss';


.title {
  background-color: $green;
  color: white;
  font-family: 'Roboto', sans-serif;
  padding: 10px;
  > div {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
    @include tablet {
      flex-direction: row;
    }
  }
  .searchbar {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    @include tablet {
      min-width: 350px;
      width: 30%;
      margin: 0 0 0 auto;
    }
    input {
      border-radius: 5px;
      color: white;
      width: 100%;
      border-bottom: 2px solid white!important;
      outline: none;
      @include tablet {
        padding: 10px;
      }
    }
    i {
      font-size: 20px;
      background-color: $green;
      transform: translateX(-20px);
      padding: 5px;
    }
  }
}


.dashboard {
  .BounceLoader {
    @include flexColumn;
    align-items: center;
    height: 65vh;
    justify-content: center;

  }
  width: 90%;
  margin: 0 auto;
  padding: 5vw 0;
  @include desktop {
    padding: 2vw 0;
  }
  .recipeBox {
    @include flexRow;
    // justify-content: center;
    #breakfast {
      background-image: url('../../images/french_toast.jpg');
    }
    #lunch {
      background-image: url('../../images/lunch.jpg');
    }
    #dinner {
      background-image: url('../../images/pizza.jpg');
    }
    #side_dish {
      background-image: url('../../images/asparagus.jpg');
    }
    #drinks {
      background-image: url('../../images/drinks.jpg');
    }
    #dessert {
      background-image: url('../../images/dessert.jpg');
    }
    #other {
      background-image: url('../../images/bread.jpg');
    }
    .addRecipe {
      width: 120px;
      height: 120px;
      background-color: lighten($primary-transparent, 20%);
      background-blend-mode: overlay;
      background-size: cover;
      background-position: center;
      margin-right: 10px;
      margin-bottom: 10px;
      color: 	$primary;
      @include flexColumn;
      justify-content: center;
      align-items: center;
      border-radius: 5px;
      border: 2px solid $primary;
      cursor: pointer;
      // flex-grow: 1;
      transition: background-color .5s;
      &:hover {
        background-color: $primary-transparent;
        i {
          transform: scale(1.15);
        }
      }
      @include tablet {
        width: 175px;
        height: 100px;
      }
      > i {
        color: $white;
        font-size: 50px;
        transition: all .4s;
      }
    }
    .recipeCard {
      width: 120px;
      height: 120px;
      background-color: $primary;
      margin-right: 10px;
      margin-bottom: 10px;
      font-family: 'Roboto', sans-serif;
      color: $white;
      @include flexColumn;
      justify-content: center;
      align-items: center;
      border-radius: 5px;
      flex-grow: 1;
      cursor: pointer;
      transition: all .3s;
      border: 2px solid $primary;
      h3 {
        padding: 10px;
        text-align: center;
      }
      h4 {
        text-align: center;
      }
      &:hover {
        background-color: $white;
        color: $primary;
      }
      @include tablet {
        width: 175px;
        height: 100px;
      }
      @include desktop {
        flex-grow: unset;
      }
    }
  }
  h1, h2, h3 {
    font-family: 'Roboto', sans-serif;
  }
}


#filter-button {
  display: flex;
    align-items: center;
    justify-content: space-between;
  background-color: white!important;
  color: $green;
  i {
    line-height: normal;
    padding: 0px;
    transform: none;
    background-color: white;
  }
}

#dropdown {
  min-width: 210px;
  overflow-x: hidden;
  top: 168px!important;
  @include tablet {
    top: 130px!important;
  }
  li {
    display: flex;
  }
  label {
    display: flex;
    align-items: center;
    cursor: pointer;
    width: 100%;
    padding: 0 10px;
  }
}

